Fix logo on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -78,7 +78,7 @@ body {
     #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
       color: #257f82; }
     #mainNav .navbar-brand img#logo {
-      width: 256px; }
+      width: 128px; }
   #mainNav .navbar-nav .nav-item .nav-link {
     font-size: 90%;
     font-weight: 400;
@@ -104,6 +104,8 @@ body {
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s; }
+      #mainNav .navbar-brand img#logo {
+        width: 256px; }
     #mainNav .navbar-nav .nav-item .nav-link {
       padding: 1.1em 1em !important; }
     #mainNav.navbar-shrink {
